tests/baselines/reference/constDeclarations-useBeforeDefinition2.errors.txt
error TS5101: Option 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
  Use 'outFile' instead.
file1.ts(1,1): error TS2448: Block-scoped variable 'c' used before its declaration.


!!! error TS5101: Option 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
!!! error TS5101:   Use 'outFile' instead.
==== file1.ts (1 errors) ====
    c;
    ~
!!! error TS2448: Block-scoped variable 'c' used before its declaration.
!!! related TS2728 file2.ts:1:7: 'c' is declared here.
    
==== file2.ts (0 errors) ====
    const c = 0;